# body-anxiety-intervention

./: .gitignore  README.md  content.js  final_probs_2.csv  pyproject.toml
app/: clip_wrapper.py  home.py  logic.py  main.py  window.py
app/test/: test_window.py
pet-extension/: manifest.json
photoviewer/: background.js  content.js  manifest.json  styles.css  supabase-config.js
photoviewer_update/: background.js  content.js  manifest.json
post_extention/: background.js  content.js
posts-intervention/: content.js  manifest.json
prompt_evaluation/: evaluation.py  evaluation_template.ipynb  resources.py
