[project]
name = "body-image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "clip",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "notebook>=7.4.5",
    "pandas>=2.3.2",
    "pillow>=11.3.0",
    "requests>=2.32.5",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.35.0",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
